--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>Dragon Game by Trymunx</title>
-		<script src="DragonGame.js"/>
+		<script src="DragonGame.js"></script>
 	</head>
 	<body onload="runGame()">
         <span id="dragonHP"></span>
-        <div id="console"/>
+        <div id="console"></div>
 	</body>
 </html>
