Fixed dragonHP display

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<script src="DragonGame.js"></script>
 	</head>
 	<body onload="runGame()">
-        <span id="dragonHP"></span>
-        <div id="console"></div>
+        <span id="dragonHPBarSpan"></span>
+        <div id="consoleDiv"></div>
 	</body>
 </html>
