Added graphical HP bars to page, swapped order of output (newest is now at the top)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 	<head>
 		<title>Dragon Game by Trymunx</title>
 		<script src="DragonGame.js"></script>
+        <style>
+            .hpBar {
+                border: 2px solid;
+            }
+            .hpBarL {
+                margin-right: 0;
+                border-right: none;
+            }
+            hpBarR {
+                margin-left: 0;
+                border-left: none;
+                background-color: grey;
+            }
+        </style>
 	</head>
 	<body onload="runGame()">
         <span id="dragonHPBarSpan"></span>
